--- a/containers/header-partwidthmenu/header.styles.scss
+++ b/containers/header-partwidthmenu/header.styles.scss
@@ -20,6 +20,7 @@ $width-logo: clamp(50px, 15vw, 150px);
       flex-direction: row;
       flex-wrap: wrap;
       gap: 10px;
+      row-gap: 5px;
     }
   }
   .header-container-logo {
